--- a/ejercicio.html
+++ b/ejercicio.html
@@ -33,20 +33,15 @@
     <div class="container-cover">
         <div class="container-info-cover">
             <h1>¡Nuestro Servicio Comunitario!</h1>
-            <p>Mucho gusto mi nombre es Marianny, estudiante de la seccion A de informatica y en este blog en donde vas conocer mas de mi. ¡Espero sea de tu agrado!</p>
+            <p>🔹 Tecnología al servicio de la salud
+                🔹 Aprendizaje con propósito
+                🔹 Compromiso más allá del código</p>
+
+                <p>Marianny Castillo y Luis Mendez</p>
         </div>
     </div>
 <!--contenido del blog-->
-    <div class="container-content">
-        <article>
-            <h1>Titulo del articulo </h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dicta soluta nemo consequuntur, vero suscipit dolores provident exercitationem saepe, eos consectetur dolore voluptatem perspiciatis itaque. Fuga et quos ab iusto?</p>
-
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eius exercitationem ea? Ex sint, distinctio tempora dolores expedita nihil praesentium nostrum itaque minima ab iusto. Quidem ad laudantium repellendus placeat!</p>
-
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam veritatis numquam pariatur voluptatibus facere ducimus, soluta porro est quia. Similique, dicta porro. Tenetur sed ullam non nam illum reiciendis quia.</p>
-        </article>
-
+    <div>
     </div>
 </body>
 </html>
