Actualizacion de css y de imagenes de perfil

--- a/ejercicio.html
+++ b/ejercicio.html
@@ -38,6 +38,13 @@
                 🔹 Compromiso más allá del código</p>
 
                 <p>Marianny Castillo y Luis Mendez</p>
+
+                <div class="container-profile-mary">
+        
+                </div>
+                <div class="container-profile-luis">
+        
+                </div>
         </div>
     </div>
 <!--contenido del blog-->
