Actualizacion del del encabezado completamente con descripcion e imagenes

--- a/ejercicio.html
+++ b/ejercicio.html
@@ -39,12 +39,11 @@
 
                 <p>Marianny Castillo y Luis Mendez</p>
 
+                <div class="container-fotos">
                 <div class="container-profile-mary">
-        
                 </div>
                 <div class="container-profile-luis">
-        
-                </div>
+                </div></div>
         </div>
     </div>
 <!--contenido del blog-->
